--- a/package.json
+++ b/package.json
@@ -4,29 +4,25 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "pm2 start . --name rowbot --watch",
-    "start": "pm2 start .",
-    "start:cluster": "pm2 start . --name rowbot -i max",
-    "stop": "pm2 delete all",
-    "logs": "pm2 logs --raw",
+    "dev": "node ./src/index.js",
+    "prestart": "node ./src/functions/deploycommands.js",
+    "start": "node ./src/index.js",
     "lint": "eslint --ext .ts,.js",
     "format": "eslint --ext .ts,.js --fix"
   },
   "engines": {
-    "node": "16.9.x"
+    "node": ">=16.9.x"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "@discordjs/rest": "^1.0.1",
-    "discord.js": "^14.1.1",
-    "dotenv": "^16.0.1",
-    "pm2": "^5.2.0"
+    "discord.js": "^14.1.1"
   }
 }
